fixed some issues on ZarrInfo